# tap-simplesat

./: LICENSE  README.md  meltano.yml  pyproject.toml
tap_simplesat/: Simplesat API (v1).postman_collection.json  __init__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
